--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
+    "eslint": "^8.41.0",
+    "file-loader": "^6.2.0",
     "firebase": "^9.21.0",
+    "next": "^13.4.4",
+    "node-loader": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.0.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
+    "uui": "^1.0.7",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
